# lead-finder

./: .env.example  .gitignore  README.md  pyproject.toml  qualify.py
.github/workflows/: run-finder.yml
config/: keywords.yaml
src/prospect_finder/: __init__.py  cli.py  config.py  database.py  discovery.py  extraction.py  models.py  sheets.py  sources.py  verification.py
tests/: test_config.py  test_discovery.py  test_extraction.py  test_models.py  test_sheets.py  test_sources.py  test_verification.py
