[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prospect-finder"
version = "0.1.0"
description = "Trades exam prep YouTube prospect finder"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "google-api-python-client>=2.130",
    "google-auth>=2.29",
    "anthropic>=0.28",
    "gspread>=6.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9",
]

[project.scripts]
prospect-finder = "prospect_finder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prospect_finder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
